--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="portfolio.html" class="nav_links">Portfolio</a>
         </li>
         <li>
-          <a href="#" class="nav_links">Contact</a>
+          <a href="contact.html" class="nav_links">Contact</a>
         </li>
         <li>
           <i class="fa fa-globe"></i>
@@ -278,5 +278,6 @@
     <script src="JS/animation.js"></script>
     <script src="JS/slider.js"></script>
     <script src="JS/nav.js"></script>
+    <!-- <script src="JS/jquery.counterup.min.js"></script> -->
   </body>
 </html>
