--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
           <a href="portfolio.html" class="nav_links">Portfolio</a>
         </li>
         <li>
-          <a href="#" class="nav_links">Contact</a>
+          <a href="contact.html" class="nav_links">Contact</a>
         </li>
         <li>
           <i class="fa fa-globe"></i>
