--- a/project_detail.html
+++ b/project_detail.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact US</title>
-    <link rel="stylesheet" href="CSS/main.css" />
+    <title>Document</title>
+    <link rel="stylesheet" href="CSS/project_detail.css" />
     <link rel="stylesheet" href="CSS/navbar.css" />
+    <link rel="stylesheet" href="CSS/main.css" />
     <link rel="stylesheet" href="CSS/footer.css" />
-    <link rel="stylesheet" href="CSS/contact.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -56,72 +56,45 @@
         </li>
       </ul>
     </nav>
-    <div id="contact">
-      <div class="contact_me">
+    <section id="project_detail">
+      <div class="image">
+        <img src="images/portfolio-1-img.jpg" />
+      </div>
+      <div class="details">
         <div class="content">
-          <h6>-- Contact ME</h6>
-          <h2>Get In Touch With Me</h2>
+          <h2>Branding Nice Studio</h2>
           <p>
-            The technological revolution is changing aspect of our lives, and
-            the fabric of society itself. it's also changing the way we learn
-            and what we learn. Factual knowledge is less prized when everything
-            you ever need to know can be found on your phone. There's no
-            imperative to be an expert Factual knowledge is less prized when
-            everything you ever need to know can be found at doing everything.
+            I will give you a complete account of the system, and expound the
+            actual teachings of the great explorer of the truth, the
+            master-builder of human happiness. No one rejects, dislikes, or
+            avoids pleasure itself, because it is pleasure, but because those
+            who do not know how to pursue pleasure rationally encounter
+            consequences that are extremely painful. Nor again is there anyone
+            who loves or pursues or desires to obtain pain of itself, because it
+            is pain, but because those who do not know how to pursue pleasure
+            rationally
           </p>
         </div>
-        <div class="phone">
-          <i class="fas fa-phone"></i>
-          <div id="number">
-            <h3>Phone</h3>
-            <p>+99 (0) 101 0000 888</p>
-            <p>+99 (0) 101 0000 777</p>
+        <div class="social">
+          <div class="like">
+            <i class="fas fa-heart"></i>
+            <span>Likes (110) </span>
+          </div>
+          <div class="share">
+            <i class="fas fa-share"></i>
+            <span>Share</span>
           </div>
         </div>
-        <div class="Email">
-          <i class="fas fa-envelope"></i>
-          <div id="mymail">
-            <h3>Email</h3>
-            <p>Info@yourdomain.com</p>
-            <p>Info@yourdomain.net</p>
-          </div>
+        <div class="category">
+          <h3>Categories</h3>
+          <p>App Design</p>
+        </div>
+        <div class="client">
+          <h3>Client</h3>
+          <p>Company Name</p>
         </div>
       </div>
-      <form class="form" action="" method="POST">
-        <div class="name">
-          <!-- <label for="name">Name:</label> -->
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            placeholder="Full Name"
-          />
-        </div>
-
-        <div class="email">
-          <!-- <label for="email">Email:</label> -->
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            placeholder="Email"
-          />
-        </div>
-        <!-- <label for="message">Message:</label><br /> -->
-        <textarea
-          id="message"
-          name="message"
-          rows="5"
-          required
-          placeholder="Message*"
-        ></textarea
-        ><br /><br />
-
-        <input type="submit" value="Send To Me" id="submit" />
-      </form>
-    </div>
+    </section>
     <!-- Footer -->
     <section id="footer">
       <div class="logo">
@@ -145,7 +118,8 @@
         <a href="#" class="github"><i class="fab fa-github"></i></a>
       </div>
     </section>
-    <script src="JS/nav.js"></script>
+    <script src="JS/project_detail.js"></script>
     <script src="JS/animation.js"></script>
+    <script src="JS/nav.js"></script>
   </body>
 </html>
