--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <i class="fa fa-globe"></i>
         </li>
         <li>
-          <button href="#">Contact Me</button>
+          <a href="contact.html"><button>Contact Me</button></a>
         </li>
       </ul>
     </nav>
@@ -70,7 +70,7 @@
           collaborated with talented people to create digital products.
         </p>
         <div class="nav_button">
-          <a href="#">Contact Me</a>
+          <a href="contact.html">Contact Me</a>
         </div>
       </div>
       <div class="img">
@@ -131,7 +131,7 @@
             imperative to be an expert at doing everything when you can.
           </p>
           <div class="nav_button">
-            <a href="#">Download CV</a>
+            <a href="index.html">Download CV</a>
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
               can.
             </p>
             <div class="read_more">
-              <a href="#">read more</a>
+              <a href="project_detail.html">read more</a>
             </div>
           </div>
         </div>
@@ -180,7 +180,7 @@
               can.
             </p>
             <div class="read_more">
-              <a href="#">read more</a>
+              <a href="project_detail.html">read more</a>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
               can.
             </p>
             <div class="read_more">
-              <a href="#">read more</a>
+              <a href="project_detail.html">read more</a>
             </div>
           </div>
         </div>
@@ -278,6 +278,7 @@
     <script src="JS/animation.js"></script>
     <script src="JS/slider.js"></script>
     <script src="JS/nav.js"></script>
+    <script src="JS/project_detail.js"></script>
     <!-- <script src="JS/jquery.counterup.min.js"></script> -->
   </body>
 </html>
