--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
           <i class="fa fa-globe"></i>
         </li>
         <li>
-          <button href="#">Contact Me</button>
+          <a href="contact.html"><button>Contact Me</button></a>
         </li>
       </ul>
     </nav>
@@ -72,7 +72,7 @@
               can.
             </p>
             <div class="read_more">
-              <a href="#">read more</a>
+              <a href="project_detail.html">read more</a>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
               can.
             </p>
             <div class="read_more">
-              <a href="#">read more</a>
+              <a href="project_detail.html">read more</a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
               can.
             </p>
             <div class="read_more">
-              <a href="#">read more</a>
+              <a href="project_detail.html">read more</a>
             </div>
           </div>
         </div>
