--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSS/counter.css" />
     <link rel="stylesheet" href="CSS/slider_section.css" />
     <link rel="stylesheet" href="CSS/footer.css" />
+    <link rel="stylesheet" href="CSS/contact_card.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -251,6 +252,19 @@
       </div>
     </div>
 
+    <section id="contact_card">
+      <div class="box">
+        <img src="images/Intersection-1.svg" id="img1" />
+        <h2>Lets Work Together</h2>
+        <p>
+          The technological revolution is changing aspect of our lives, and the
+          fabric of society itself. it's also changing the way we learn and what
+          we learn
+        </p>
+        <a href="contact.html"><button>Contact ME</button></a>
+        <img src="images/Intersection-2.svg" id="img2" />
+      </div>
+    </section>
     <!-- Footer -->
     <section id="footer">
       <div class="logo">
